Update JMockit version